Style container, circle container, button, rotate

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <button id="close">
             <i class="fas fa-times"></i>
           </button>
-          <button class="open">
+          <button id="open">
             <i class="fas fa-bars"></i>
           </button>
         </div>
@@ -26,7 +26,7 @@
         <small>Random Authtor</small>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae mollitia id necessitatibus earum minus inventore quod consequuntur adipisci officiis, tempore libero ut maxime maiores odio provident perspiciatis! Non distinctio, labore amet vel necessitatibus cumque quia debitis ab ad repudiandae veniam officiis quisquam deserunt nulla quam aut! Labore temporibus quis quidem laboriosam officia enim vitae, earum aliquam alias qui fugiat beatae vero voluptate pariatur molestiae porro ipsam, culpa blanditiis placeat suscipit explicabo amet dolorum aliquid? Vel voluptates dolorem placeat, quis nihil exercitationem saepe inventore laborum earum doloribus amet minus nemo possimus repellat nulla adipisci voluptatibus ducimus aspernatur molestiae dolore quas laudantium.</p>
         <h3>My Cat</h3>
-        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/domestic-cat-lies-in-a-basket-with-a-knitted-royalty-free-image-1592337336.jpg?crop=0.668xw:1.00xh;0.247xw,0&resize=980:*" alt="cat">
+        <img src="https://images.unsplash.com/photo-1482066490729-6f26115b60dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTAxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=700&q=60" alt="cat">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum consequatur cum velit hic maiores distinctio reprehenderit vitae dicta veniam, debitis tenetur provident officia quaerat, corrupti explicabo suscipit a enim obcaecati optio magni eius perspiciatis neque. Commodi blanditiis eveniet reiciendis quod voluptas ad illo voluptatum ipsam ullam delectus nam, officiis cumque magnam ab quo facere dolores voluptatibus nostrum sed deleniti reprehenderit fugiat eius et quas. Aspernatur qui accusamus adipisci, culpa corrupti beatae porro explicabo omnis molestiae?</p>
       </div>
     </div>
