--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <div class="content">
         <h1>Amazing Article</h1>
-        <small>Random Authtor</small>
+        <small>Random Author</small>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae mollitia id necessitatibus earum minus inventore quod consequuntur adipisci officiis, tempore libero ut maxime maiores odio provident perspiciatis! Non distinctio, labore amet vel necessitatibus cumque quia debitis ab ad repudiandae veniam officiis quisquam deserunt nulla quam aut! Labore temporibus quis quidem laboriosam officia enim vitae, earum aliquam alias qui fugiat beatae vero voluptate pariatur molestiae porro ipsam, culpa blanditiis placeat suscipit explicabo amet dolorum aliquid? Vel voluptates dolorem placeat, quis nihil exercitationem saepe inventore laborum earum doloribus amet minus nemo possimus repellat nulla adipisci voluptatibus ducimus aspernatur molestiae dolore quas laudantium.</p>
         <h3>My Cat</h3>
         <img src="https://images.unsplash.com/photo-1482066490729-6f26115b60dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTAxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=700&q=60" alt="cat">
